# SimpleLibreOffice

./: CMakeLists.txt  README.md  generate_header_files.sh  libreoffice.hxx  main.cpp  unowriter.cpp  unowriter.h
